--- a/templates/job-on-demand.yaml
+++ b/templates/job-on-demand.yaml
@@ -29,7 +29,7 @@ spec:
   {{- end }}
   parallelism: {{ .Values.scanner.job.parallelism }}
   completions: {{ .Values.scanner.job.completions }}
-  
+
   template:
     metadata:
       labels:
@@ -43,40 +43,40 @@ spec:
     spec:
       serviceAccountName: {{ include "bd-selfscan.serviceAccountName" . }}
       restartPolicy: Never
-      
+
       # Security context
       {{- with .Values.scanner.job.securityContext }}
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      
+
       # Node selection
       {{- with .Values.scanner.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      
+
       {{- with .Values.scanner.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      
+
       {{- with .Values.scanner.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      
+
       # Image pull secrets
       {{- with .Values.registry.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      
+
       containers:
         - name: scanner
           image: {{ .Values.scanner.image }}
           imagePullPolicy: {{ .Values.scanner.imagePullPolicy }}
-          
+
           # Command execution
           {{- if .Values.scanTarget }}
           command: ["/scripts/scan-application.sh"]
@@ -85,7 +85,7 @@ spec:
           command: ["/scripts/scan-all-applications.sh"]
           args: ["--yes"]
           {{- end }}
-          
+
           # Environment variables
           env:
             # Black Duck configuration
@@ -103,7 +103,7 @@ spec:
                   optional: false
             - name: TRUST_CERT
               value: "{{ .Values.blackduck.trustCert }}"
-            
+
             # Scanning configuration
             - name: PROJECT_TIER
               value: "{{ .Values.scanning.projectTier }}"
@@ -115,7 +115,7 @@ spec:
               value: "{{ .Values.scanning.imageDownloadRetries }}"
             - name: SCAN_TIMEOUT
               value: "{{ .Values.scanning.scanTimeout }}"
-            
+
             # Debug configuration
             - name: DEBUG_ENABLED
               value: "{{ .Values.debug.enabled }}"
@@ -123,7 +123,7 @@ spec:
               value: {{ .Values.debug.logLevel | quote }}
             - name: KEEP_TEMP_FILES
               value: "{{ .Values.debug.keepTempFiles }}"
-              
+
             # Job metadata
             - name: JOB_NAME
               valueFrom:
@@ -133,64 +133,62 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-                  
+
             # Specific scan target (if provided)
             {{- if .Values.scanTarget }}
             - name: SCAN_TARGET
               value: {{ .Values.scanTarget | quote }}
             {{- end }}
-          
+
           # Resource limits
           resources:
             {{- toYaml .Values.scanner.resources | nindent 12 }}
-          
+
           # Volume mounts
           volumeMounts:
             # Scanner scripts
             - name: scanner-scripts
               mountPath: /scripts
               readOnly: true
-            
+
             # Application configuration
             - name: applications-config
               mountPath: /config
               readOnly: true
-            
+
             # Temporary working directory
             - name: temp-storage
               mountPath: /tmp
-            
+
             # Docker socket (if needed for image operations)
             {{- if .Values.scanner.dockerSocket.enabled }}
             - name: docker-socket
               mountPath: /var/run/docker.sock
             {{- end }}
-            
-          # Security context
+
+          # Container security context - now uses values.yaml instead of hardcoded
+          {{- with .Values.scanner.containerSecurityContext }}
           securityContext:
-            allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: false  # Needed for temp files
-            capabilities:
-              drop:
-                - ALL
-      
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+
       volumes:
         # Scanner scripts ConfigMap
         - name: scanner-scripts
           configMap:
             name: {{ include "bd-selfscan.name" . }}-scanner-scripts
             defaultMode: 0755
-        
+
         # Application configuration
         - name: applications-config
           configMap:
             name: {{ .Values.configMap.applications.name }}
-        
+
         # Temporary storage for downloads and scanning
         - name: temp-storage
           emptyDir:
             sizeLimit: {{ .Values.scanner.resources.limits.ephemeralStorage | default "50Gi" }}
-        
+
         # Docker socket (if enabled)
         {{- if .Values.scanner.dockerSocket.enabled }}
         - name: docker-socket
